<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="Sign In"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/material_dynamic_neutral90"
        android:hint="Username"
        android:paddingLeft="20dp"
        android:textColorHint="@color/white"
        android:textSize="25dp"></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/material_dynamic_neutral90"
        android:hint="Password"
        android:paddingLeft="20dp"
        android:textColorHint="@color/white"
        android:textSize="25dp"></EditText>

    <Button
        android:id="@+id/signin1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#004CFF"
        android:text="sign In"
        android:textColor="@color/white"
        android:textSize="20dp"></Button>


</LinearLayout>